made navbar translucent and fixed some li alignment in navbar

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     border-top: 0;
     border-left: 0;
     border-right: 0;
+    opacity: 0.8;
+    line-height: 1em;
+    font-size: 1em;
+    height: 2em;
     }
 
 footer {
@@ -108,6 +112,8 @@ h2 {
   display: -ms-flexbox;
   display:         flex;
   flex-wrap: wrap;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .row > [class*='col-'] {
   display: flex;
